--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,103 @@
 @import "reset.less";
 @import "fonts.less";
 @import "texts.less";
+
+
+@text-color: 			#b3b3b3; // цвет основного текста
+@green: 				#89C5C3;
+@gray-dark: 			#808080;
+@gray-light: 			#999999;
+@gray: 					#cacaca;
+
+*, *:after, *:before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+html, body {
+	margin: 0;
+	padding: 0;
+	background: #fff;
+	font-family: 'Circe-fnt';
+	font-size: 14px;
+	letter-spacing: 1px;
+	color: @text-color;
+}
+body:before {
+	content: '';
+	width: 100%;
+	height: 235px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f4f4f4+0,ffffff+100 */
+	background: #f0f0f0; /* Old browsers */
+	background: -moz-linear-gradient(top,  #f4f4f4 0%, #ffffff 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  #f4f4f4 0%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  #f4f4f4 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4f4f4', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+}
+body:after {
+	content: '';
+	height: 150px;
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f0f0f0+100 */
+	background: #ffffff; /* Old browsers */
+	background: -moz-linear-gradient(top,  #ffffff 0%, #f4f4f4 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  #ffffff 0%,#f4f4f4 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  #ffffff 0%,#f4f4f4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 ); /* IE6-9 */
+}
+.wrapper() {
+	clear: both;
+	display: block;
+	overflow: hidden;
+	width: 1200px;
+	margin: auto;
+}
+
+
+header {
+	width: 100%;
+	height: 100px;
+	background: #fff;
+	position: relative;
+	z-index: 99;
+}
+.header {
+	.wrapper();
+	height: 100px;
+	overflow: visible;
+	position: relative;
+	font-size: 0;
+	&__logo {
+		font-size: 18px;
+		font-weight: 300;
+		text-transform: uppercase;
+		text-decoration: none;
+		text-align: center;
+		color: @green;
+		line-height: 22px;
+		height: 100px;
+		padding: 30px 0;
+		position: absolute;
+		left: -50px;
+	}
+	&__menu {
+		display: inline-block;
+		overflow: hidden;
+		& li {
+			display: inline-block;
+			font-size: 14px;
+			font-weight: 300;
+			color: 
+		}
+	}
+
+}
