--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,20 @@ footer {
   padding: 0 15px;
   margin: auto;
   height: 200px;
+  padding: 5px 0 0 0;
+}
+.footer__info {
+  float: left;
+  overflow: hidden;
+}
+.footer__info-title {
+  display: block;
+  overflow: hidden;
+  font-size: 10px;
+  color: #cacaca;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  line-height: 34px;
 }
 .footer__contacts {
   float: left;
@@ -341,6 +355,7 @@ footer {
   font-size: 10px;
   color: #999999;
   line-height: 34px;
+  text-transform: uppercase;
 }
 .footer__menu li a {
   display: block;
@@ -355,11 +370,48 @@ footer {
 }
 .footer__menu li a.twitter {
   display: inline-block;
+  vertical-align: middle;
   width: 16px;
   height: 11px;
-  opacity: .7;
+  opacity: .4;
+  margin: 0 13px 0 0;
   background: url('../images/twitter.svg') 0 0 no-repeat;
 }
 .footer__menu li a.twitter:hover {
+  opacity: 1;
+}
+.footer__menu li a.vkontakte {
+  display: inline-block;
+  vertical-align: middle;
+  width: 15px;
+  height: 9px;
+  opacity: .4;
+  margin: 0 13px 0 0;
+  background: url('../images/vk.svg') 0 0 no-repeat;
+}
+.footer__menu li a.vkontakte:hover {
+  opacity: 1;
+}
+.footer__menu li a.facebook {
+  display: inline-block;
+  vertical-align: middle;
+  width: 5px;
+  height: 12px;
+  opacity: .4;
+  margin: 0 13px 0 0;
+  background: url('../images/facebook.svg') 0 0 no-repeat;
+}
+.footer__menu li a.facebook:hover {
+  opacity: 1;
+}
+.footer__menu li a.instagramm {
+  display: inline-block;
+  vertical-align: middle;
+  width: 12px;
+  height: 12px;
+  opacity: .4;
+  background: url('../images/instagramm.svg') 0 0 no-repeat;
+}
+.footer__menu li a.instagramm:hover {
   opacity: 1;
 }
