--- a/less/style.less
+++ b/less/style.less
@@ -190,6 +190,23 @@ footer {
 .footer {
 	.wrapper();
 	height: 200px;
+	padding: 5px 0 0 0;
+	&__info {
+		float: left;
+		overflow: hidden;
+
+
+		&-title {
+			display: block;
+			overflow: hidden;
+			font-size: 10px;
+			color: @gray;
+			text-transform: uppercase;
+			letter-spacing: 2px;
+			line-height: 34px;
+		}
+
+	}
 	&__contacts {
 		float: left;
 		overflow: hidden;
@@ -217,6 +234,7 @@ footer {
 			font-size: 10px;
 			color: @gray-light;
 			line-height: 34px;
+			text-transform: uppercase;
 			& a {
 				display: block;
 				color: @gray-light;
@@ -227,14 +245,50 @@ footer {
 				}
 				&.twitter {
 					display: inline-block;
+					vertical-align: middle;
 					width: 16px;
 					height: 11px;
-					opacity: .7;
+					opacity: .4;
+					margin: 0 13px 0 0;
 					background: url('../images/twitter.svg') 0 0 no-repeat;
 					&:hover {
 						opacity: 1;
 					}
-				
+				}
+				&.vkontakte {
+					display: inline-block;
+					vertical-align: middle;
+					width: 15px;
+					height: 9px;
+					opacity: .4;
+					margin: 0 13px 0 0;
+					background: url('../images/vk.svg') 0 0 no-repeat;
+					&:hover {
+						opacity: 1;
+					}
+				}
+				&.facebook {
+					display: inline-block;
+					vertical-align: middle;
+					width: 5px;
+					height: 12px;
+					opacity: .4;
+					margin: 0 13px 0 0;
+					background: url('../images/facebook.svg') 0 0 no-repeat;
+					&:hover {
+						opacity: 1;
+					}
+				}
+				&.instagramm {
+					display: inline-block;
+					vertical-align: middle;
+					width: 12px;
+					height: 12px;
+					opacity: .4;
+					background: url('../images/instagramm.svg') 0 0 no-repeat;
+					&:hover {
+						opacity: 1;
+					}
 				}
 			}
 		}
