--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,19 @@ header {
 .purchases__link:hover {
   color: #808080;
 }
+.overlay {
+  display: none;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+.overlay-show {
+  display: block;
+}
 .cart-popup {
   position: absolute;
   top: 50px;
@@ -300,10 +313,35 @@ header {
   width: 385px;
   height: 550px;
   background: #fff;
+  border: 1px solid #e6e6e6;
+  padding: 0 35px;
   z-index: 999;
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.cart-popup__header {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  height: 100px;
+  padding: 20px 0;
+  position: relative;
+}
+.cart-popup__header .purchases {
+  float: left;
+}
+.cart-popup:before {
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 38px;
+  right: 38px;
+  background: url('../images/popup-close.svg') center center no-repeat;
+  background-size: 11px 11px;
+  cursor: pointer;
 }
 footer {
   position: fixed;
@@ -312,10 +350,20 @@ footer {
   right: 0;
   bottom: -161px;
   background: #fff;
-  z-index: 99;
+  z-index: 999;
   -webkit-transition: 0.4s;
   -moz-transition: 0.4s;
   transition: 0.4s;
+}
+footer .open {
+  content: '';
+  display: block;
+  cursor: pointer;
+  width: 100%;
+  height: 45px;
+  z-index: 99;
+  top: 0;
+  position: absolute;
 }
 footer .footer-open {
   display: block;
