--- a/less/style.less
+++ b/less/style.less
@@ -8,6 +8,7 @@
 @gray-dark: 			#808080;
 @gray-light: 			#999999;
 @gray: 					#cacaca;
+@gray-border: 			#e6e6e6;
 
 *, *:after, *:before {
     -webkit-box-sizing: border-box;
@@ -172,6 +173,19 @@ header {
 		}
 	}
 }
+.overlay {
+	display: none;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 99;
+	&-show {
+		display: block;
+	}
+}
 .cart-popup {
 	position: absolute;
 	top: 50px;
@@ -179,10 +193,34 @@ header {
 	width: 385px;
 	height: 550px;
 	background: #fff;
+	border: 1px solid @gray-border;
+	padding: 0 35px;
 	z-index: 999;
 	.shadow();
+	&__header {
+		clear: both;
+		display: block;
+		overflow: hidden;
+		height: 100px;
+		padding: 20px 0;
+		position: relative;
+		& .purchases {
+			float: left;
+		}
+	}
+	&:before {
+		content: '';
+		display: block;
+		width: 20px;
+		height: 20px;
+		position: absolute;
+		top: 38px;
+		right: 38px;
+		background: url('../images/popup-close.svg') center center no-repeat;
+		background-size: 11px 11px;
+		cursor: pointer;
+	}
 }
-
 
 
 
@@ -194,8 +232,19 @@ footer {
 	right: 0;
 	bottom: -161px;
 	background: #fff;
-	z-index: 99;
+	z-index: 999;
 	.transition(.4s);
+	& .open {
+		content: '';
+		display: block;
+		cursor: pointer;
+		width:100%;
+		height: 45px;
+		z-index: 99;
+		top:0;
+		position: absolute;
+		
+	}
 	& .footer-open {
 		display: block;
 		width: 23px;
