--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,34 @@ header {
   background-size: 11px 11px;
   cursor: pointer;
 }
+.cart-popup__checkout {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 65px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-top: 1px solid #e6e6e6;
+  line-height: 65px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+}
+.cart-popup__checkout:hover {
+  background: #808080;
+  color: #fff;
+}
+.ship-list {
+  clear: both;
+  display: block;
+  height: 350px;
+  overflow: auto;
+}
 footer {
   position: fixed;
   width: 100%;
