--- a/less/style.less
+++ b/less/style.less
@@ -220,8 +220,33 @@ header {
 		background-size: 11px 11px;
 		cursor: pointer;
 	}
+	&__checkout {
+		position: absolute;
+		display: block;
+		width: 100%;
+		height: 65px;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		border-top: 1px solid @gray-border;
+		line-height: 65px;
+		text-align: center;
+		font-size: 14px;
+		font-weight: 300;
+		letter-spacing: 2px;
+		.transition();
+		&:hover {
+			background: @gray-dark;
+			color: #fff;
+		}
+	}
 }
-
+.ship-list {
+	clear: both;
+	display: block;
+	height: 350px;
+	overflow: auto;
+}
 
 
 
