--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,67 @@ header {
   color: #fff;
   background: #808080;
 }
+.container {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  width: 1200px;
+  padding: 0 15px;
+  margin: auto;
+  position: relative;
+  z-index: 99;
+}
+.navigation {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  text-align: center;
+  padding: 60px 0;
+}
+.navigation__level-1 {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  font-size: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 300;
+  margin: 0 0 5px 0;
+}
+.navigation__level-1 a {
+  color: #cccccc;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+}
+.navigation__level-1 a:hover {
+  color: #808080;
+}
+.navigation__level-1 span {
+  display: inline-block;
+  margin: 0 25px;
+}
+.navigation__level-2 {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  font-size: 20px;
+  letter-spacing: 2px;
+  font-weight: 300;
+}
+.navigation__level-2 a {
+  color: #cccccc;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+}
+.navigation__level-2 a:hover {
+  color: #808080;
+}
+.navigation__level-2 span {
+  display: inline-block;
+  margin: 0 35px;
+}
 footer {
   position: fixed;
   width: 100%;
