--- a/less/style.less
+++ b/less/style.less
@@ -7,6 +7,7 @@
 @green: 				#89C5C3;
 @gray-dark: 			#808080;
 @gray-light: 			#999999;
+@gray-lighter: 			#cccccc;
 @gray: 					#cacaca;
 @gray-border: 			#e6e6e6;
 
@@ -322,6 +323,59 @@ header {
 	}
 }
 
+
+.container {
+	.wrapper();
+	position: relative;
+	z-index: 99;
+}
+.navigation {
+	clear: both;
+	display: block;
+	overflow: hidden;
+	text-align: center;
+	padding: 60px 0;
+	&__level-1 {
+		clear: both;
+		display: block;
+		overflow: hidden;
+		font-size: 10px;
+		text-transform: uppercase;
+		letter-spacing: 2px;
+		font-weight: 300;
+		margin: 0 0 5px 0;
+		& a {
+			color: @gray-lighter;
+			.transition();
+			&:hover {
+				color: @gray-dark;
+			}
+		}
+		& span {
+			display: inline-block;
+			margin: 0 25px;
+		}
+	}
+	&__level-2 {
+		clear: both;
+		display: block;
+		overflow: hidden;
+		font-size: 20px;
+		letter-spacing: 2px;
+		font-weight: 300;
+		& a {
+			color: @gray-lighter;
+			.transition();
+			&:hover {
+				color: @gray-dark;
+			}
+		}
+		& span {
+			display: inline-block;
+			margin: 0 35px;
+		}
+	}
+}
 
 
 footer {
