--- a/less/style.less
+++ b/less/style.less
@@ -327,7 +327,7 @@ header {
 .container {
 	.wrapper();
 	position: relative;
-	z-index: 99;
+	z-index: 9;
 }
 .navigation {
 	clear: both;
@@ -376,8 +376,80 @@ header {
 		}
 	}
 }
-
-
+.content {
+	clear: both;
+	display: block;
+	overflow: hidden;
+	&__left {
+		float: left;
+		width: 270px;
+	}
+	&__right {
+		float: right;
+		width: 1170px;
+	}
+}
+.filter {
+	clear: both;
+	display: block;
+	overflow: hidden;
+	&__item {
+		margin: 0 0 35px 0;
+		&-title {
+			clear: both;
+			display: block;
+			overflow: hidden;
+			font-size: 14px;
+			color: @gray-dark;
+			font-weight: 300;
+			margin: 0 0 10px 0;
+		}
+		clear: both;
+		display: block;
+		overflow: hidden;
+		&-list {
+			clear: both;
+			display: block;
+			overflow: hidden;
+			padding: 0 0 0 15px;
+			position: relative;
+			margin: 0 0 3px 0;
+		}
+	}
+}
+input.chck-round[type="checkbox"] {
+	display: none;
+	&:checked + label:before {
+		background: @gray-border;
+		border: 1px solid @gray-dark;
+	}
+	&:checked + label {
+		color: @gray-dark;
+	}
+}
+input.chck-round[type="checkbox"] + label {
+	font-size: 10px;
+	text-transform: uppercase;
+	color: @gray-lighter;
+	cursor: pointer;
+	letter-spacing: 2px;
+	font-weight: 300;
+	.transition();
+	&:before {
+		content: '';
+		position: absolute;
+		left: 0;
+		display: block;
+		vertical-align: middle;
+		width: 9px;
+		height: 9px;
+		top: 50%;
+		margin-top: -4px;
+		border: 1px solid @gray-border;
+		.radius();
+		.transition();
+	}
+}
 footer {
 	position: fixed;
 	width: 100%;
@@ -396,7 +468,6 @@ footer {
 		z-index: 99;
 		top:0;
 		position: absolute;
-		
 	}
 	& .footer-open {
 		display: block;
