--- a/less/style.less
+++ b/less/style.less
@@ -31,6 +31,7 @@ html, body {
 	letter-spacing: 1px;
 	color: @text-color;
 	position: relative;
+	min-height: 100vh;
 }
 body:before {
 	content: '';
